# gui-toolkit-benchmarks

./: README.md  linux-x-setup-for-virtualbox.md  setup-host.md  setup-host.sh
.github/workflows/: main.yml
results/: 1681364563.json  index.js  publish.py
results/20200818-test/: macos.json  windows.json
toolkits/: .gitignore
toolkits/C++/fltk/: bench.dockerfile  build.dockerfile  metadata.json
toolkits/C++/qml/: app.pro  bench.dockerfile  build.dockerfile  metadata.json
toolkits/C++/qt/: app.pro  bench.dockerfile  build.dockerfile  metadata.json
toolkits/C++/wxwidgets/: bench.dockerfile  build.dockerfile  metadata.json
toolkits/C/gtk/: bench.dockerfile  build.dockerfile  metadata.json
toolkits/Java/swing/: bench.dockerfile  build.dockerfile  metadata.json
toolkits/JavaScript/electron/: bench.dockerfile  metadata.json  package.json
toolkits/Python/tkinter/: bench.dockerfile  metadata.json  tkinter.dockerfile
toolkits/Rust/dioxus/: Cargo.toml  bench.dockerfile  build.dockerfile  metadata.json
toolkits/Rust/druid/: Cargo.toml  bench.dockerfile  build.dockerfile  druid.dockerfile  metadata.json
toolkits/Rust/egui/: .gitignore  (+5 more)
toolkits/Rust/tauri/: Cargo.toml  metadata.json  tauri.conf.json
toolkits/Rust/tauri/src/: main.rs
toolkits/Rust/tauri/ui/: index.html
toolkits/linux-x/: README.md  configure.sh
toolset/: .gitignore  benchmark.py  pixelpeep.c  publish.py  result.json  setup-host.md  setup-host.sh
toolset/pixelpeep/: main-xcb.c  main-xlib-shm.c  main-xlib.c  main.c
utils/: benchmark.py  publish.py  result.json  result.py
(+48 files in other folders)
